add tasks to webpage

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 <link href="assets/images/diamond.png" rel="icon" />
 <title>Project 1</title>
-<meta name="description" content="Your ThemeForest item Name and description">
+<meta name="description" content="184 Project 2 Writeup">
 <meta name="author" content="harnishdesign.net">
 
 <!-- Stylesheet
@@ -53,13 +53,6 @@
         <!-- <a class="logo ml-md-3" href="index.html" title="iDocs Template"> <img src="assets/images/logo.png" alt="iDocs Template"/> </a>  -->
 		<span class="text-2 ml-2">Jasmine Lin and Jennifer Prince</span> 
         <!-- Logo End -->
-
-       <!--  <ul class="social-icons social-icons-sm ml-lg-2 mr-2">
-          <li class="social-icons-twitter"><a data-toggle="tooltip" href="http://www.twitter.com/harnishdesign/" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
-          <li class="social-icons-facebook"><a data-toggle="tooltip" href="http://www.facebook.com/harnishdesign/" target="_blank" title="" data-original-title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-          <li class="social-icons-dribbble"><a data-toggle="tooltip" href="http://www.dribbble.com/harnishdesign/" target="_blank" title="" data-original-title="Dribbble"><i class="fab fa-dribbble"></i></a></li>
-        </ul>
-      </div> -->
     </nav>
     <!-- Navbar End --> 
   </header>
